--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import "bootstrap.min.css";
 body {
   font-size: 14px;
 }
@@ -14,6 +15,10 @@ body {
 
 .jumbotron-heading {
   font-weight: 400;
+}
+
+.jumbotron-heading a {
+  text-decoration: none;
 }
 
 .jumbotron .container {
